feat(EIDOMNI-1127): fixing static compliance tests for the Swiss Profile / OID4VCI
